objects/Wave__c.object
<CustomObject>
    <fields>
        <fullName>Online_female_places_available__c</fullName>
        <description>Formula subtracting assigned/reserved places from capacity, to calculate number of remaining places</description>
        <formula>MIN(  Online_places_available__c  , Online_YP_female_capacity__c - Girls_Reserved_Assigned__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of remaining places for girls</inlineHelpText>
        <label>Online female places available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_independent_school_capacity__c</fullName>
        <description>Number of online places available for YP at independent schools. Calculated from total capacity and independent percentage limit</description>
        <formula>Round (Online_booking_YP_place_capacity__c  * Ind_school_type_place_limit_percentage__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of online places available for YP at independent schools. Calculated from total capacity and independent percentage limit</inlineHelpText>
        <label>Online independent school capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_male_Ind_places_available__c</fullName>
        <description>Formula. Returns the minimum of independent places available and male places available (both of which already take the total number of places into account)</description>
        <formula>MIN(  Online_male_places_available__c,  Online_Ind_School_places_available__c )</formula>
        <inlineHelpText>The number of places available for boys at an independent school</inlineHelpText>
        <label>Online male Ind places available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_male_bookings_percentage_full__c</fullName>
        <description>Percentage of male online places that are full (either assigned or reserved)</description>
        <formula>IF (Online_YP_male_capacity__c &gt; 0, Boys_Reserved_Assigned__c / Online_YP_male_capacity__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of male online places that are full (either assigned or reserved)</inlineHelpText>
        <label>Online male bookings, percentage full</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Online_male_over_bookings__c</fullName>
        <description>Subtracts the total male reserved/assigned YP from the total capacity for male YP (no other variables are taken into account). If the wave is overbooked for such YP, a minus number will be displayed.</description>
        <formula>Online_YP_male_capacity__c -  Boys_Reserved_Assigned__c</formula>
        <inlineHelpText>Subtracts the total male reserved/assigned YP from the total capacity for male YP (no other variables are taken into account). If the wave is overbooked for such YP, a minus number will be displayed.</inlineHelpText>
        <label>Online male (over)bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_male_places_available__c</fullName>
        <description>Formula subtracting assigned/reserved places from capacity, to calculate number of remaining places</description>
        <formula>MIN( Online_places_available__c   ,  Online_YP_male_capacity__c  - Boys_Reserved_Assigned__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of remaining places for boys</inlineHelpText>
        <label>Online male places available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_places_available__c</fullName>
        <description>Formula subtracting assigned/reserved places from capacity, to calculate number of remaining places</description>
        <formula>IF(Online_booking_YP_place_capacity__c  -  Total_Reserved_Assigned__c &lt; 0 &amp;&amp; Online_booking_YP_place_capacity__c  -  Total_Reserved_Assigned__c&gt;-1,0,Online_booking_YP_place_capacity__c  -  Total_Reserved_Assigned__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of remaining places</inlineHelpText>
        <label>Online places available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_single_school_capacity__c</fullName>
        <description>Number of online place available for YP at a single school. Calculated from total online capacity and single school percentage limit</description>
        <formula>Round (Online_booking_YP_place_capacity__c  * Single_school_place_limit_percentage__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of online place available for YP at a single school. Calculated from total online capacity and single school percentage limit</inlineHelpText>
        <label>Online single school capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Spaces_on_the_Wave__c</fullName>
        <description>Replaces the field YP_places_held_back_inclusion_cat_4_5__c in the field YP_places_held_back_total__c in the auto fill process. This will calculate how many places we are holding back for SL&apos;s 4, 5 and HTR.</description>
        <formula>SL_4a_Place_Taken__c  +
  SL_4b_Place_Taken__c  +
  Remaining_SL5_Places_Available__c  +
  Remaining_HTR_Places_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inclusion total spaces on Wave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_18_room__c</fullName>
        <label>Over 18 room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - 1</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>Discretionary number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The PM for the wave. Field was formally labelled PA</description>
        <inlineHelpText>The wave staffing fields are currently being updated. If you have questions or concerns regarding these fields, please contact innovation.support@the-challenge.org</inlineHelpText>
        <label>Wave PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waves9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCKO_Coach_Leave_time__c</fullName>
        <description>Time Coach leaves the PCKO Venue</description>
        <inlineHelpText>Time Coach leaves the PCKO Venue</inlineHelpText>
        <label>PC KO Coach Leave time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCKO_Mktg_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the Marketing person running the PC KO</description>
        <label>Sales KO Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waves5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCKO_Mktg_lead_mobile__c</fullName>
        <description>Mobile number of the Marketing lead. Automatically populated once the Marketing lead has been selected</description>
        <formula>PCKO_Mktg_Lead__r.MobilePhone</formula>
        <label>Sales KO lead mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Arrival_Time__c</fullName>
        <description>Time the YP can be expected to arrive at the PC Provider</description>
        <inlineHelpText>Time the YP can be expected to arrive at the PC Provider</inlineHelpText>
        <label>PC Arrival Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Day_Off_1__c</fullName>
        <label>PC Day Off 1 (website)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Day_Off_1_text__c</fullName>
        <inlineHelpText>Please enter the extra text you want to appear on the website.</inlineHelpText>
        <label>PC Day Off 1 text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Day_Off_2__c</fullName>
        <label>PC Day Off 2 (website)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Day_Off_2_text__c</fullName>
        <inlineHelpText>Please enter the extra text you want to appear on the website.</inlineHelpText>
        <label>PC Day Off 2 text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Estimated_return_time__c</fullName>
        <label>PC Estimated return time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_KO_Timetable_Check_Complete__c</fullName>
        <label>PC KO Timetable Check Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_KO_day__c</fullName>
        <description>Personal Challenge Kick Off Day</description>
        <inlineHelpText>Personal Challenge Kick Off Day</inlineHelpText>
        <label>PC KO day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_KO_start_time_TL__c</fullName>
        <description>Personal Challenge Kick Off start time for SM, TL and ATL</description>
        <inlineHelpText>Personal Challenge Kick Off start time for SM, TL and ATL</inlineHelpText>
        <label>PC KO start time (Staff)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_KO_start_time_YP__c</fullName>
        <description>Personal Challenge Kick Off YP</description>
        <inlineHelpText>Personal Challenge Kick Off YP</inlineHelpText>
        <label>PC KO start time (YP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_KO_start_time_other_staff__c</fullName>
        <description>Personal Challenge Kick Off start time for APM/PM/LO</description>
        <inlineHelpText>Personal Challenge Kick Off start time for APM/PM/LO</inlineHelpText>
        <label>PC KO start time Settup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Off_Day_1__c</fullName>
        <inlineHelpText>Please enter the 1st. day off for the PC Programme Section</inlineHelpText>
        <label>PC Off Day 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Off_Day_2__c</fullName>
        <inlineHelpText>Please enter the 2nd. day off for the PC Programme Section</inlineHelpText>
        <label>PC Off Day 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Partner_Address_line_1__c</fullName>
        <formula>PC_venue__r.Address_line_1__c</formula>
        <label>PC Partner Address line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Partner_Address_line_2__c</fullName>
        <formula>PC_venue__r.Address_line_2__c</formula>
        <label>PC Partner Address line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Partner_Address_line_3__c</fullName>
        <formula>PC_venue__r.Address_line_3__c</formula>
        <label>PC Partner Address line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Partner_County_or_region__c</fullName>
        <formula>PC_venue__r.County_or_region__c</formula>
        <label>PC Partner County or region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Partner_Postcode__c</fullName>
        <formula>PC_venue__r.Postcode__c</formula>
        <label>PC Partner Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Return_day__c</fullName>
        <label>PC Return day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Sign_in_Sheet_scanned__c</fullName>
        <label>PC Sign in Sheets scanned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Tented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PC Tented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Venue_address__c</fullName>
        <formula>PC_venue__r.ShippingStreet &amp; BR() &amp;
 PC_venue__r.ShippingCity &amp; BR() &amp;
 PC_venue__r.ShippingState &amp; BR() &amp;
 PC_venue__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Venue address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_data_input__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PC data input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_dropoff_different_from_KO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PC dropoff different from KO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_partner_inclusion_notes__c</fullName>
        <formula>PC_venue__r.Medical_policy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC partner inclusion notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_register_destroyed__c</fullName>
        <label>PC register destroyed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to PC venue</description>
        <inlineHelpText>Links to PC venue</inlineHelpText>
        <label>PC venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waves</relationshipLabel>
        <relationshipName>Waves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_venue_description__c</fullName>
        <formula>PC_venue__r.Venue_description_for_timetable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC venue description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIE_Details_have_changed__c</fullName>
        <label>PIE Details have changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>PL for the wave</inlineHelpText>
        <label>PL</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Waves</relationshipLabel>
        <relationshipName>Waves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Check__c</fullName>
        <description>Checks whether current user is assigned to a wave. Returns 1 is they are, 0 if they aren&apos;t. This field is directly referenced by the Programmes User View field in the following objects:

Incidents
Bookings
Jobs

The following fields have to reference the individual wave staffing assignment fields because of object reference limits associated with Wave:

Attendance
Transport Orders
Job Placements

The following field references Job Placement&apos;s PUV field to check it&apos;s PUV field

Expenses</description>
        <formula>IF( AND( RecordType.Name  = &quot;2017&quot;,
OR( Wave_APM__c= $User.Id ,
PM__c= $User.Id ,
PA__c= $User.Id ,
SPM1__c= $User.Id ,
Summer_Manager__c= $User.Id ,
Zonal_APM__c= $User.Id ,
Support_APM_5__c= $User.Id ,
Programme_Administrator_2__c= $User.Id , 
Support_APM__c= $User.Id ,
support_APM_2__c= $User.Id ,
Support_APM_3__c= $User.Id ,
Support_APM_4__c= $User.Id ,
Support_PAM_1__c= $User.Id ,
Support_PAM_2__c= $User.Id ,
Support_PAM_3__c= $User.Id ,
Delivery_PM__c= $User.Id ,
Support_PM_2__c= $User.Id )),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programmes User View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Email__c</fullName>
        <label>PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The PAM for the wave. Field was formally labelled PM</description>
        <inlineHelpText>The wave staffing fields are currently being updated. If you have questions or concerns regarding these fields, please contact innovation.support@the-challenge.org</inlineHelpText>
        <label>Wave PAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_1_Timetable_Merge_Field__c</fullName>
        <label>Part 1 Timetable Merge Field</label>
        <length>450</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_1_accommodation_text__c</fullName>
        <label>Part 1 accommodation text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_1_accommodation_type__c</fullName>
        <description>Used in the programme pack cover letter</description>
        <inlineHelpText>Used in the programme pack cover letter</inlineHelpText>
        <label>Part 1 accommodation type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_2_Timetable_Merge_Field__c</fullName>
        <label>Part 2 Timetable Merge Field</label>
        <length>450</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_2_accommodation_text__c</fullName>
        <label>Part 2 accommodation text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_2_accommodation_type__c</fullName>
        <description>Used in the programme pack cover letter</description>
        <label>Part 2 accommodation type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_3_Celebration_end_time__c</fullName>
        <label>Part 3 (Celebration) end time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_3_RCD_end_time__c</fullName>
        <label>Part 3 (RCD) end time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_3_RCD_start_time__c</fullName>
        <label>Part 3 (RCD) start time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_3_Timetable_Merge_Field__c</fullName>
        <label>Part 3 Timetable Merge Field</label>
        <length>450</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Perham_RCA1_date__c</fullName>
        <label>Perham RCA1 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perham_RCA2_date__c</fullName>
        <label>Perham RCA2 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perham_RCA3_date__c</fullName>
        <label>Perham RCA3 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perham_RCA_Mtg_Pt__c</fullName>
        <label>Perham RCA Mtg Pt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_2_Address_Line_1__c</fullName>
        <label>Phase 2 Address Line 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_2_Address_Line_2__c</fullName>
        <label>Phase 2 Address Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_2_Address_line_3__c</fullName>
        <label>Phase 2 Address line 3</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_2_County__c</fullName>
        <label>Phase 2 County</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_2_Postcode__c</fullName>
        <label>Phase 2 Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_2_Town__c</fullName>
        <label>Phase 2 Town</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_3_PostCode__c</fullName>
        <label>Phase 3: PostCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_4_PostCode__c</fullName>
        <label>Phase 4: PostCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pilot__c</fullName>
        <label>Pilot?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>NCS Sequential RCA</fullName>
                </value>
                <value>
                    <fullName>Internal Sequential RCA</fullName>
                </value>
                <value>
                    <fullName>Tented TC</fullName>
                </value>
                <value>
                    <fullName>Senior Community Facilitator</fullName>
                </value>
                <value>
                    <fullName>Residential Practitioner</fullName>
                </value>
                <value>
                    <fullName>2 Day Campaign</fullName>
                </value>
                <value>
                    <fullName>Social Action Project with RCA Partner</fullName>
                </value>
                <value>
                    <fullName>Alternative food supplier</fullName>
                </value>
                <value>
                    <fullName>Local Transport Provider</fullName>
                </value>
                <value>
                    <fullName>Tented Village in TC</fullName>
                </value>
                <value>
                    <fullName>Music as Skill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_or_Non_Pilot__c</fullName>
        <label>Graduation: Programme Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Non Pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_wave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if wave is a pilot wave.</description>
        <label>Pilot wave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Place_available_for_Support_Worker__c</fullName>
        <label>Place available for Support Worker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Place filled</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>Yes - for 2 YPs</fullName>
                </value>
                <value>
                    <fullName>Place filled for two support workers</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 SW</fullName>
                </value>
                <value>
                    <fullName>Yes - 2 SWs</fullName>
                </value>
                <value>
                    <fullName>Yes - 1 SW for 2 YPs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practitioner_Day_Off_1__c</fullName>
        <label>Practitioner Day Off 1 (website)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Practitioner_Day_Off_1_text__c</fullName>
        <inlineHelpText>Please enter the extra text you want to appear on the website.</inlineHelpText>
        <label>Practitioner Day Off 1 text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Practitioner_Day_Off_2__c</fullName>
        <label>Practitioner Day Off 2 (website)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Practitioner_Day_Off_2_text__c</fullName>
        <inlineHelpText>Please enter the extra text you want to appear on the website.</inlineHelpText>
        <label>Practitioner Day Off 2 text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Practitioner_End_Date__c</fullName>
        <label>Practitioner End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practitioner_Off_Day_1__c</fullName>
        <inlineHelpText>Please enter the 1st. day off for the Practitioner Programme Section</inlineHelpText>
        <label>Practitioner Off Day 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practitioner_Off_Day_2__c</fullName>
        <inlineHelpText>Please enter the 2nd. day off for the Practitioner Programme Section</inlineHelpText>
        <label>Practitioner Off Day 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practitioner_Start_Date__c</fullName>
        <label>Practitioner Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practitioner_end_time__c</fullName>
        <inlineHelpText>Time that non-res Practitioners&apos; day ends</inlineHelpText>
        <label>Practitioner end time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme_Administrator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The wave staffing field are currently being updated. If you have questions or concerns regarding these fields, please contact innovation.support@the-challenge.org</inlineHelpText>
        <label>Programme Administrator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wavesk5AT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programme_Pack_Letters__c</fullName>
        <formula>&quot;https://bookings.ncsthechallenge.org/assets/&quot; &amp;   Timetable_document_file_name__c</formula>
        <label>Published Timetables</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <formula>TEXT(YEAR( PC_KO_day__c ))&amp; Name</formula>
        <label>Programme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme_booklet_YP__c</fullName>
        <label>Programme booklet (YP)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Programme_booklet__c</fullName>
        <label>Programme booklet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Programmes_Timetable_Check_Complete__c</fullName>
        <label>All Phase Programmes Timetable check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progs_Number_of_YPs_started_wave__c</fullName>
        <inlineHelpText>Complete this field with the number of young people that started the wave</inlineHelpText>
        <label>Progs Number of YPs started wave at PCKO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Progs_mktg_diff__c</fullName>
        <formula>abs(Progs_Number_of_YPs_started_wave__c -   Mktg_Number_of_YPs_started_Wave__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progs/mktg diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provides_Halal_meat__c</fullName>
        <formula>TEXT(PC_venue__r.Provides_Halal_meat__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provides Halal meat?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Acceptance__c</fullName>
        <description>URL to the Wave standard acceptance letter</description>
        <formula>&quot;https://bookings.ncsthechallenge.org/assets/&quot; &amp; &quot;Acceptance_&quot; &amp;   Document_file_name__c</formula>
        <label>Published Acceptance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Graduation__c</fullName>
        <description>URL to the the wave standard Graduation letter</description>
        <formula>&quot;https://bookings.ncsthechallenge.org/assets/&quot; &amp; &quot;Grad_&quot; &amp;    Document_file_name__c</formula>
        <label>Published Graduation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_PIE_details__c</fullName>
        <description>URL to the wave standard PIE details</description>
        <formula>&quot;https://bookings.ncsthechallenge.org/assets/&quot; &amp; &quot;PIE_&quot; &amp;    Document_file_name__c</formula>
        <label>Published PIE details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Programme_letter__c</fullName>
        <description>URL to the Wave standard programme information letter</description>
        <formula>&quot;https://bookings.ncsthechallenge.org/assets/&quot; &amp; &quot;Prog_Letter_&quot; &amp; Document_file_name__c</formula>
        <label>Published Programme letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_1_2_payroll_date_time__c</fullName>
        <description>USed in RCA 1-2 payroll escalations</description>
        <label>RCA 1 payroll date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RCA_1_Sat__c</fullName>
        <label>RCA 1 Sat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_1_Sun__c</fullName>
        <label>RCA 1 Sun</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_2_Sat__c</fullName>
        <label>RCA 2 Sat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_2_Sun__c</fullName>
        <label>RCA 2 Sun</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_2_payroll_date_time__c</fullName>
        <inlineHelpText>Date/time by which RCA 2 payroll reminders start going out to APMs and PMs</inlineHelpText>
        <label>RCA 2 payroll date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RCA_3_Sat__c</fullName>
        <label>RCA 3 Sat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_3_Sun__c</fullName>
        <label>RCA 3 Sun</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_4_Meeting_Point__c</fullName>
        <description>Field used for the PL and APL W2BW.  In Summer 2012 this was populated by Mass upload.</description>
        <label>RCA 4 Meeting Point</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RCA_4_payroll_date_time__c</fullName>
        <inlineHelpText>Date/time by which payroll reminders start going out to APMs and PMs</inlineHelpText>
        <label>RCA 4 payroll date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RCA_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of user responsible for RCA Booking on the Wave</description>
        <inlineHelpText>Name of user responsible for RCA Booking on the Wave</inlineHelpText>
        <label>RCA Booking</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wavesnd7d</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RCA_Day_Off_1__c</fullName>
        <label>RCA Day Off 1 (website)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RCA_Day_Off_1_text__c</fullName>
        <inlineHelpText>Please enter the extra text you want to appear on the website.</inlineHelpText>
        <label>RCA Day Off 1 text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RCA_Day_Off_2__c</fullName>
        <label>RCA Day Off 2 (website)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RCA_Day_Off_2_text__c</fullName>
        <inlineHelpText>Please enter the extra text you want to appear on the website.</inlineHelpText>
        <label>RCA Day Off 2 text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RCA_End_Date__c</fullName>
        <description>The day RCA ends.</description>
        <label>RCA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_End_Day__c</fullName>
        <formula>IF(ISBLANK(RCA_4_Sat__c), RCA_4_Sun__c,  IF( RCA_4_Sun__c &lt; RCA_4_Sat__c , RCA_4_Sun__c, RCA_4_Sat__c) )</formula>
        <label>RCA End Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_End_time_staff__c</fullName>
        <label>RCD End time staff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_Off_Day_1__c</fullName>
        <inlineHelpText>Please enter the 1st. day off for the RCA Programme Section</inlineHelpText>
        <label>RCA Off Day 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_Off_Day_2__c</fullName>
        <inlineHelpText>Please enter the 2nd. day off for the RCA Programme Section</inlineHelpText>
        <label>RCA Off Day 2</label>
        <type>Date</type>
    </fields>
</CustomObject>